--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-    "name": "gulp-recipes",
-    "version": "0.0.1",
-    "description": "Gulp Recipes",
-    "private": true,
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/robrbecker/gulp-recipes.git"
-    },
-    "readmeFilename": "README.md",
-    "bin": {
-        "gulp-init": "./src/init.js"
-    },
-    "devDependencies": {
-        "chalk": "^0.4.0",
-        "fs-extra": "^0.8.1",
-        "grunt": "^0.4.4",
-        "grunt-contrib-copy": "^0.5.0",
-        "gulp": "^3.6.1",
-        "gulp-bump": "^0.1.7",
-        "gulp-changed": "^0.3.0",
-        "gulp-connect": "^2.0.5",
-        "gulp-if": "^1.0.0",
-        "gulp-install": "^0.1.4",
-        "gulp-open": "^0.2.8",
-        "gulp-tsc": "^0.7.0",
-        "lodash": "^2.4.1",
-        "open": "0.0.5",
-        "yargs": "^1.2.1"
-    }
+  "name": "gulp-recipes",
+  "version": "0.0.1",
+  "description": "Gulp Recipes",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/robrbecker/gulp-recipes.git"
+  },
+  "readmeFilename": "README.md",
+  "bin": {
+    "gulp-init": "./src/init.js"
+  },
+  "devDependencies": {
+    "chalk": "^0.4.0",
+    "fs-extra": "^0.8.1",
+    "grunt": "^0.4.4",
+    "grunt-contrib-copy": "^0.5.0",
+    "gulp": "^3.6.1",
+    "gulp-bump": "^0.1.7",
+    "gulp-changed": "^0.3.0",
+    "gulp-connect": "^2.0.5",
+    "gulp-if": "^1.0.0",
+    "gulp-install": "^0.1.4",
+    "gulp-open": "^0.2.8",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.2.0",
+    "gulp-tsc": "^0.7.0",
+    "lodash": "^2.4.1",
+    "open": "0.0.5",
+    "yargs": "^1.2.1"
+  }
 }
