Add linting for JS and TS

--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -11,7 +11,10 @@
         "./serve",
         "./dist",
         "./bump",
-        "./watch"
+        "./watch",
+        "./jshint",
+        "./tslint",
+        "./lint"
     ],
     "path": {
         "src": "./src/",
