--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "gulp-connect": "^2.0.5",
     "gulp-if": "^1.0.0",
     "gulp-install": "^0.1.4",
+    "gulp-jshint": "^1.5.5",
     "gulp-open": "^0.2.8",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.2.0",
     "gulp-tsc": "^0.7.0",
+    "gulp-tslint": "^1.1.0",
+    "jshint": "^2.5.0",
+    "jshint-stylish": "^0.1.5",
     "lodash": "^2.4.1",
     "open": "0.0.5",
     "yargs": "^1.2.1"
