--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-install": "^0.1.4",
     "gulp-jshint": "^1.5.5",
     "gulp-open": "^0.2.8",
+    "gulp-plato": "^0.2.1",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.2.0",
     "gulp-tsc": "^0.7.0",
