--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-connect": "^2.0.5",
     "gulp-if": "^1.0.0",
     "gulp-install": "^0.1.4",
+    "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.5.5",
     "gulp-open": "^0.2.8",
     "gulp-plato": "^0.2.1",
